Fixed layout issue in order view screen (OFBIZ-369). Thanks to David Jones for having provided the solution.
git-svn-id: https://svn.apache.org/repos/asf/incubator/ofbiz/trunk@454328 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -938,3 +938,7 @@ margin:0 0 1% 1%;
 height:1%;
 clear: left;
 }
+.bothclear{
+height:1%;
+clear: both;
+}
