--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1033,6 +1033,10 @@ margin:0 0 1% 1%;
 height:1%;
 clear: left;
 }
+.bothclear{
+height:1%;
+clear: both;
+}
 
 /* ==== Styles For Form Widgets === */
 .formTableBordered {
